spacing fix

--- a/cardrender.css
+++ b/cardrender.css
@@ -18,7 +18,7 @@ body
 .cardfile.artist .cardfile_bgr
 {
 	position:		fixed;
-	top:			48pt;
+	top:			26pt;
 	bottom:			0;
 	left:			0;
 	right:			0;
@@ -52,6 +52,7 @@ body
 	right:		0;
 
 	padding-top:	4pt;
+	padding-bottom: 4pt;
 
 	background-color: #d1221b;
 
